Thu Dec  3 06:20:59 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkwindow.c: moved checks upon focus setting from
 	gtk_window_real_set_focus to gtk_window_set_focus, so we don't
	emit the signal if unneccessary.

	* gtk/gtkwidget.c (gtk_widget_grab_focus): clear up the old focus
	containers when grabbing focus on a new widget. this is based on
	a patch from Alexis Mikhailov, submitted to gtk-list on 4 Nov 1998.

	* gtk/gtkclist.c (gtk_clist_focus_out): set CLIST_CHILD_HAS_FOCUS
	flag, so we take the buttons into consideration upon the next focus
	request.

	* gtk/gtkcontainer.c (gtk_container_set_focus_child): fixed an
 	assertment.

Wed Dec  2 17:45:21 CST 1998 Shawn T. Amundson <amundson@gtk.org>

	* gtk/gtkpixmap.c: Fixes for low-color displays and a slight
	  enhancement for true-color displays.

	* INSTALL:
	  README:
	  configure.in:
	  gtk+.spec:
	  docs/gtk-config.1: up to version 1.1.6

Wed Dec  2 01:36:49 PST 1998 Manish Singh <yosh@gimp.org>

	* gtk/gtkfeatures.h.in: lets #define GTK_HAVE_FEATURES_1_1_6 before
	we release it this time

Wed Dec  2 01:39:02 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtknotebook.h: 
	* gtk/gtknotebook.c: s/gtk_notebook_nth_page/gtk_notebook_get_nth_page/.

	* incremented version number to 1.1.6 and made Gtk
 	dependant on GLib 1.1.6.

	* gtk/gtkwidget.h (struct _GtkRequisition): changed width and height
 	from guint16 to gint16, since sizes bigger than 32767 are not supported
 	anyways, and aritmethics with intermediate negative values are possible
 	now.

Tue Dec  1 00:00:04 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkscrolledwindow.c:
	implementation of GTK_POLICY_NEVER functionality, added rationales
	on the policy and size requisition handling at the top.
	(gtk_scrolled_window_size_request):
	we assume a default minimum for our child's width and height
	if [hv]scrollbar_policy != GTK_POLICY_NEVER, except when the user
	specified the dimension explicitely.
 	(gtk_scrolled_window_size_allocate): 